# context-keeper

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  context-keeper-mcp.sh  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: install-binary.sh
src/: main.rs
