[package]
name = "context-keeper"
version = "0.2.0"
edition = "2021"
description = "AI-Native Development Context Engine - Helps AI agents remember your build environment"
license = "MIT"
repository = "https://github.com/user/context-keeper"
keywords = ["ai", "mcp", "development", "context", "aosp", "ros"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# MCP SDK
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"

# Config parsing
toml = "0.8"
glob = "0.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
